--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title> Watchlist website by Shikha </title>
         <link rel="stylesheet" href="style.css">
+        <!--google fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="header">
-
+            <nav> 
+            <!---Nav bar with logo and menu-->
+            <a href="index.html"><img src="Photos/logoS.png"></a>
+                <div class="nav-links" id="navLinks">
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">COURSE</a></li>
+                        <li><a href="">BLOG</a></li>
+                        <li><a href="">CONTACT</a></li>
+                    </ul>
+                </div>
+            </nav>
         </section>
+
+
+
+
+
+
+
+
+
+
+
+
     </body>
 </html>
