--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                     </ul>
                 </div>
             </nav>
+            <!---Center text-->
+            <div class="text-box">
+                <h1>Watchlist</h1>
+                <p>The entertainment industry captivates with its blend of storytelling, creativity, and technology, continually pushing the boundaries of what is possible.<br> ability to evoke emotions and connect people worldwide is watchlist</p>
+                <!---button-->
+                <a href="" class="hero-btn">Visit us to know more</a>
+            </div>
+
         </section>
 
 
