--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="style.css">
         <!--google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <section class="header">
@@ -13,6 +15,9 @@
             <!---Nav bar with logo and menu-->
             <a href="index.html"><img src="Photos/logoS.png"></a>
                 <div class="nav-links" id="navLinks">
+                    <!--close icon in mobile responsive-->
+                    <i class="fa fa-times" onclick="hideMenu()"></i>
+
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
@@ -21,6 +26,8 @@
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
+                <!--menu icon in mobile responsive-->
+                <i class="fa fa-bars" onclick="showMenu()"></i> 
             </nav>
             <!---Center text-->
             <div class="text-box">
@@ -38,8 +45,16 @@
 
 
 
-
-
+    <!---javascript for togle menu----->
+        <script>
+            var navLinks = document.getElementById("navLinks");
+            function showMenu(){
+                navLinks.style.right ="0";
+            }
+            function hideMenu(){
+                navLinks.style.right ="-150px";
+            }
+        </script>
 
 
 
