--- a/index.html
+++ b/index.html
@@ -40,7 +40,32 @@
         </section>
 
 
+<!---Genre-->
 
+<section class="Genre">
+    <h1>Genre to Explore</h1>
+    <p>Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. </p>
+
+    <div class="row">
+
+        <div class="Genre-col">
+            <h3>Action</h3>
+            <p>  Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. </p>
+        </div>
+        <div class="Genre-col">
+            <h3>Comedy</h3>
+            <p>  Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. </p>
+        </div>
+        <div class="Genre-col">
+            <h3>Romance</h3>
+            <p>  Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. </p>
+        </div>
+
+        
+
+    </div>
+
+</section>
 
 
 
