--- a/index.html
+++ b/index.html
@@ -44,24 +44,22 @@
 
 <section class="Genre">
     <h1>Genre to Explore</h1>
-    <p>Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. </p>
+    <p>Explore the best of entertainment From heart-pounding action to heartwarming romance, there's something for everyone. </p>
 
     <div class="row">
 
         <div class="Genre-col">
             <h3>Action</h3>
-            <p>  Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. </p>
+            <p> Get your adrenaline pumping with our top action picks. From blockbusters to thrilling adventures, films will keep you on the edge of your seat. </p>
         </div>
         <div class="Genre-col">
             <h3>Comedy</h3>
-            <p>  Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. </p>
+            <p>Lighten up your mood with our selection of comedy gems. Enjoy a good laugh with hilarious movies and web series guaranteed to bring joy and laughter. </p>
         </div>
         <div class="Genre-col">
             <h3>Romance</h3>
-            <p>  Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. </p>
+            <p> Indulge in tales of love and passion with our romantic favorites. These heartwarming stories will sweep you off your feet and touch your soul.</p>
         </div>
-
-        
 
     </div>
 
