--- a/index.html
+++ b/index.html
@@ -65,6 +65,38 @@
 
 </section>
 
+    <!-----------theater------------>
+
+<section class="theater">
+    <h1>Theater You Should Explore</h1>
+    <p>Lauron ipsim dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+
+    <div class="row">
+
+        <div class="theater-col">
+            <img src="Photos/Drive-In1.png">
+            <div class="layer">
+                <h3>DRIVE - IN</h3>
+            </div>
+        </div>
+        <div class="theater-col">
+            <img src="Photos/download1.png">
+            <div class="layer">
+                <h3>CINEMA</h3>
+            </div>
+        </div>
+        <div class="theater-col">
+            <img src="Photos/Cinema1.png">
+            <div class="layer">
+                <h3>HOME THEATER</h3>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+
 
 
 
