--- a/index.html
+++ b/index.html
@@ -96,6 +96,37 @@
 
 </section>
 
+<!-----------footer------------>
+<section class="footer">
+    <h4>About Me</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nesciunt dolorem eos dolore, <br>incidunt corrupti commodi alias neque, cumque error veniam, </p>
+    <div class="icons">
+        <!----error-->
+        <i class="fa fa-linkedin"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-facebook"></i>
+    </div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!---javascript for togle menu----->
         <script>
             var navLinks = document.getElementById("navLinks");
