--- a/index.html
+++ b/index.html
@@ -96,6 +96,47 @@
 
 </section>
 
+<!------type------->
+<section class="type">
+    <h1>Type You'll Enjoy</h1>
+    <p>Lauron ipsim dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+
+    <div class="row">
+
+        <div class="type-col">
+            <img src="Photos/movie.png">
+                <h3>Movies</h3>
+                <p>Feature-length films offering rich storytelling, character development, and immersive experiences, perfect for hours of entertainment.</p>
+        </div>
+
+        <div class="type-col">
+            <img src="Photos/series.png">
+                <h3>Series</h3>
+                <p>Serialized content available online, providing episodic storytelling that keeps viewers engaged with continuous, evolving plots</p>
+        </div>
+
+        <div class="type-col">
+            <img src="Photos/shortflim.png">
+                <h3>Short Film</h3>
+                <p>Concise and impactful narratives, short films deliver powerful stories and artistic expression in a brief format, typically under 30 minutes.</p>
+        </div>
+
+    </div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-----------footer------------>
 <section class="footer">
     <h4>About Me</h4>
