--- a/index.html
+++ b/index.html
@@ -125,7 +125,57 @@
 
 </section>
 
+<!---testimonials---->
+<section class="testimonials">
+    <h1>Testimonials</h1>
 
+    <div class="row">
+        <div class="testimonials-col">
+            <img src="Photos/walt.jpeg">
+            <div>
+                <p>
+                    Movies can and do have tremendous influence in shaping young lives in the realm of entertainment towards the ideals and objectives of normal adulthood.
+                </p>
+                <h3>Walt Disney</h3>
+            </div>
+        </div>
+
+        <div class="testimonials-col">
+            <img src="Photos/Charlie.jpg">
+            <div>
+                <p>
+                    The cinema is a mirror by which we often see ourselves. And The basic essential of a great actor is that he loves himself in acting.I do not mean it in a derogatory sense. 
+
+                </p>
+                <h3>Charlie Chaplin</h3>
+            </div>
+        </div>
+
+        <div class="testimonials-col">
+            <img src="Photos/Meryl.jpg">
+            <div>
+                <p>
+                    Acting is not about being someone different. It's finding the similarity in what is apparently different, then finding myself in there.
+                </p>
+                <h3>Meryl Streep</h3>
+            </div>
+        </div>
+
+        <div class="testimonials-col">
+            <img src="Photos/frank.jpg">
+            <div>
+                <p>
+                    You can be the most artistically perfect performer in the world, but an audience is like a broad—if you're indifferent, end of conversation
+                </p>
+                <h3>Frank Sinatra</h3>
+            </div>
+        </div>
+    </div>   
+
+
+
+
+</section>
 
 
 
