--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
 
 </section>
 
-
+<!---call to action---->
+<section class="cta">
+    <h1>Go Watch Something</h1>
+    <a href="https://www.netflix.com/in/" class="hero-btn">NETFLIX</a>
+</section>
 
 
 
